# kohai

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  kohai-core.opam  kohai-prelude.opam  kohai.opam  prelude.opam  rensai-fmt.opam  rensai-qcheck.opam  rensai.opam  yocaml_kohai.opam  yocaml_rensai.opam
.github/workflows/: test-ocaml-ci.yml
lib/core/: IO.ml  IO.mli  datetime.ml  datetime.mli  dune  duration.ml  duration.mli  eff.ml  eff.mli  error.ml  error.mli  path.ml  path.mli  regex.ml  regex.mli  sigs.mli  uuid.ml  uuid.mli
lib/interaction/: dune
lib/interaction/action/: described_item.ml  global.mli  log.ml  log.mli  sector.mli  state.ml  state.mli  transient_log.ml  transient_log.mli
lib/interaction/workflow/: described_item.ml  log.ml  log.mli  project.ml  sector.ml  state.ml  state.mli  supervised_directory.ml  supervised_directory.mli  transient_log.ml  transient_log.mli
lib/jsonrpc/: dune  jsonrpc.ml
lib/model/: context.ml  context.mli  described_item.ml  described_item.mli  dune  key_value.ml  key_value.mli  log.ml  log.mli  resolver.ml  resolver.mli  sector.ml  sector.mli  state.ml  state.mli  transient_log.ml  transient_log.mli  url.ml  url.mli
lib/prelude/: dune  nel.ml  nel.mli  set.ml  set.mli
lib/rensai/: ast.ml  ast.mli  describe.ml  describe.mli  dune  fmt.ml  fmt.mli  json.ml  json.mli  kind.ml  kind.mli  lang.ml  lang.mli  lexer.mll  nel.mli  parser.mly  sigs.mli  validation.ml  validation.mli
lib/rensai-qcheck/: dune
lib/rensai/rensai/: ast.ml  ast.mli  describe.ml  describe.mli  kind.ml  kind.mli  validation.ml  validation.mli
lib/rensai/rensai-fmt/: dune  rensai_fmt.ml  rensai_fmt.mli
lib/server/: action.ml  action.mli  dune  eff.ml  eff.mli  error.ml  error.mli  handler.ml  handler.mli  jsonrpc.ml  jsonrpc.mli  server.ml  server.mli  services.ml  services.mli
lib/server/operation/: cross_log.ml  cross_log.mli  described_item.ml  described_item.mli  generic.ml  global.ml  global.mli  log.ml  log.mli  project.ml  project.mli  sector.ml  sector.mli  state.ml  state.mli  supervised_directory.ml  supervised_directory.mli  transient_log.ml  transient_log.mli
lib/yocaml_kohai/: datetime.ml  datetime.mli  described_item.ml  described_item.mli  dune  duration.ml  duration.mli  key_value.ml  key_value.mli  log.ml  log.mli  path.ml  path.mli  state.ml  state.mli  url.ml  url.mli  uuid.ml  uuid.mli
lib/yocaml_rensai/: dune  yocaml_rensai.ml  yocaml_rensai.mli
site-lisp/: kohai-buffer.el  kohai-core.el  kohai-generic.el  kohai-project.el  kohai-req.el  kohai-sector.el  kohai-state.el  kohai-transient-log.el  kohai-transient.el  kohai.el  rens-mode.el  rensai-mode.el
test/core/: datetime_query.ml  datetime_test.ml  dune  path_test.ml
test/model/: described_item_test.ml  dune  sector_test.ml  state_test.ml  url_test.ml
test/prelude/: dune  nel_test.ml
test/rensai/: dune  json_test.ml  kind_pretty_printer_test.ml  lang_test.ml  nel_test.ml  pretty_printer_test.ml  random_test.ml  simpe_pp_test.ml  specific_validator_test.ml  validation_test.ml
test/server/: dune  input_parser.ml  jsonrpc_test.ml  logging_procedure_test.ml  methods_test.ml  sector_test.ml  supervised_directory_test.ml  transient_log_test.ml  util.ml  util.mli  virtfs.ml  virtfs.mli  virtfs_test.ml
tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/bindings/c/: tree-sitter-rensai.pc.in
tree-sitter/bindings/c/tree_sitter/: tree-sitter-rensai.h
tree-sitter/bindings/go/: binding.go  binding_test.go
tree-sitter/bindings/node/: binding.cc  index.js
tree-sitter/bindings/python/tests/: test_binding.py
tree-sitter/bindings/python/tree_sitter_rensai/: __init__.py  binding.c
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/bindings/swift/TreeSitterRensaiTests/: TreeSitterRensaiTests.swift
tree-sitter/queries/: highlights.scm  tags.scm
tree-sitter/src/: grammar.json  node-types.json  parser.c
